# Convention-CPP

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  Runtime-Modules-README.md
Convention/: CMakeLists.txt
Convention/[Runtime]/: Architecture.hpp  Config.hpp  EasySave.hpp  File.hpp  GlobalConfig.hpp  Math.hpp  Plugins.hpp  String.hpp  Web.hpp
Convention/[Runtime]/Generics/: NTree.hpp  Sequence.hpp  Stack.hpp
Convention/include/: Config.h
Convention/src/: CMakeLists.txt
[Test]/: CMakeLists.txt  test.cpp  test_sequence.cpp
